Integrate OpenAI ChatKit with Docusaurus and Firebase
Adds OpenAI ChatKit floating chat bubble to the site via a new React component (Root.tsx), configures Docusaurus to load ChatKit and provide workflow/domain keys, and sets up a secure Firebase Function endpoint for session management. Updates .gitignore and firebase.json for deployment, and provides a detailed integration guide in Help/openai_chatkit.md.

--- a/firebase.json
+++ b/firebase.json
@@ -21,7 +21,11 @@
         ]
       }
     ],
-    "cleanUrls": true
-  }
+    "cleanUrls": true,
+    "rewrites": [
+      { "source": "/api/chatkit/session", "function": "chatkitSession" }
+    ]
+  },
+  "functions": { "source": "functions" }
 }
 
