--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Dependencies
 /node_modules
+functions/node_modules/
+coverage/
+dist/
+.turbo/
 
 # Production
 /build
@@ -7,9 +11,16 @@
 # Generated files
 .docusaurus
 .cache-loader
+.eslintcache
 
 # Misc
 .DS_Store
+.idea/
+.vscode/
+.vercel/
+.firebase/
+.env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
@@ -18,3 +29,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
